<resources>
    <string name="app_name">DialerViewDemo</string>

    <!-- Dialpad strings -->
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters"></string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters"></string>
    <string name="dialpad_pound_letters"></string>

    <!-- Navigation Bar -->
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_phone">Phone</string>
    <string name="nav_bar_video">Video</string>

    <!-- Keypad -->
    <string name="hint_number">Enter a number</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="pound">#</string>
    <string name="dial">Dial</string>

</resources>
